--- a/public/index.html
+++ b/public/index.html
@@ -1,42 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+        />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
 
-<head>
+        <title>SB Admin 2 - Dashboard</title>
 
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+        <!-- Custom fonts for this template-->
+        <link
+            href="/sb-admin/vendor/fontawesome-free/css/all.min.css"
+            rel="stylesheet"
+            type="text/css"
+        />
+        <link
+            href="/sb-admin/https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+            rel="stylesheet"
+        />
 
-  <title>SB Admin 2 - Dashboard</title>
+        <!-- Custom styles for this template-->
+        <link href="/sb-admin/css/sb-admin-2.min.css" rel="stylesheet" />
+        <link
+            href="/fontawesome4.3.0/css/font-awesome.min.css"
+            rel="stylesheet"
+            type="text/css"
+        />
+    </head>
 
-  <!-- Custom fonts for this template-->
-  <link href="/sb-admin/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href="/sb-admin/https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <body id="page-top">
+        <div id="app"></div>
 
-  <!-- Custom styles for this template-->
-  <link href="/sb-admin/css/sb-admin-2.min.css" rel="stylesheet">
+        <!-- Bootstrap core JavaScript-->
+        <script src="/sb-admin/vendor/jquery/jquery.min.js"></script>
+        <script src="/sb-admin/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-</head>
+        <!-- Core plugin JavaScript-->
+        <script src="/sb-admin/vendor/jquery-easing/jquery.easing.min.js"></script>
 
-<body id="page-top">
-  <div id="app"></div>
-
-  <!-- Bootstrap core JavaScript-->
-  <script src="/sb-admin/vendor/jquery/jquery.min.js"></script>
-  <script src="/sb-admin/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Core plugin JavaScript-->
-  <script src="/sb-admin/vendor/jquery-easing/jquery.easing.min.js"></script>
-
-  <!-- Custom scripts for all pages-->
-  <script src="/sb-admin/js/sb-admin-2.min.js"></script>
-  <script src="/tinymce/tinymce.min.js"></script>
-  <script src="/tinymce/themes/modern/theme.min.js"></script>
-
-</body>
-
+        <!-- Custom scripts for all pages-->
+        <script src="/sb-admin/js/sb-admin-2.min.js"></script>
+        <script src="/tinymce/tinymce.min.js"></script>
+        <script src="/tinymce/themes/modern/theme.min.js"></script>
+    </body>
 </html>
-
