--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,8 @@
 
         <!-- Custom scripts for all pages-->
         <script src="/sb-admin/js/sb-admin-2.min.js"></script>
+
+        <!-- Load tinymce local -->
         <script src="/tinymce/tinymce.min.js"></script>
         <script src="/tinymce/themes/modern/theme.min.js"></script>
     </body>
